Fixed bug where the menu dropdown list contained too much padding so links dropped lower then navbar in smaller viewports.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,8 @@ header {
 .navbar {
     width: 100%;
     height: 238px;
-    }
 
+    }
 .bg-custom {
     background-color: #e7e7e7;
     border-top: 3px solid #3c3130;
@@ -41,13 +41,17 @@ header {
     padding: 0;
     }
 
+.nav-link {
+    padding: 0;
+}
+
 /* *******************Fonts******************/ 
 .ulfont {
     Font-family: 'Raleway', serif;
     Font-size: 20px;
     Font-weight: 400;
-      
-}
+
+      }
 
 
 /******************* Footer ***************/
